tests/fixtures/LatestTests/ObjectTests/errors/type_not_found.fg
/; EXPECT_ERROR: CustomTypeNotFound
var p: UnknownType = {
    name: "John",
    age: 30
}

